# CompileCollective

./: CMakeLists.txt  CMakePresets.json  README.md  grammar  vcpkg.json
src/: CMakeLists.txt  PostFixExprVisualizer.h  codegen.h  common.cpp  common.h  environment.cpp  environment.h  expr.cpp  expr.h  int_optimizer.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  stmt.cpp  stmt.h  token.cpp  token.h  type_checker.h  types.cpp  types.h
website/: Features.html  GetStarted.html  README.md  WhyCompileCollective.html  index.html  style.css
